# company-mca

./: README.md  app.py  pyproject.toml
src/company_mca/: crew.py  main.py
src/company_mca/config/: agents.yaml  tasks.yaml
src/company_mca/tools/: custom_tool.py
